--- a/Code.ipynb
+++ b/Code.ipynb
@@ -20,8 +20,8 @@
     "\n",
     "column_names = list(df.columns.values)\n",
     "\n",
-    "#print(\"Oszlopok:\",\"\\n\",column_names,\"\\n\")\n",
-    "#df.head(5)\n"
+    "print(\"Oszlopok:\",\"\\n\",column_names,\"\\n\")\n",
+    "df.head(5)\n"
    ]
   },
   {
@@ -39,11 +39,11 @@
    "source": [
     "dict = {\"ORDERNUMBER\" : \"Order number\",\"QUANTITYORDER\" : \"Quantity of products on the orderline\",\"PRICEEACH\" : \"Price for 1 product on the order line\",\"ORDERLLINENUMBER\" : \"Orderline number of order number\",\"SALES\" : \"Sale amount of order line\",\"ORDERDATE\" : \"Date of order\",\"STATUS\" : \"Status of order\",\"QTR_ID\" : \"Quarter of order (1: Quarter 1, 2: Quarter 2,etc.)\",\"MONTH_ID\" : \"Month of order (1: January, 2: February, 3: March, etc.)\",\"YEAR_ID\" : \"Year of order\",\"PRODUCTLINE\" : \"Product category\",\"MSRP\" : \"Manufacturer's suggested retail price\",\"PRODUCTCODE\" : \"Product number\",\"CUSTOMERNAME\" : \"Customer name\",\"PHONE\" : \"Customer's phone name\",\"ADDRESSLINE1\" : \"Address information of customer 1\",\"ADDRESSLINE2\" : \"Address information of customer 2\",\"CITY\" : \"City of address\",\"STATE\" : \"State of address\",\"POSTALCODE\" : \"Postalcode of address\",\"COUNTRY\" : \"Country of address\",\"TERRITORY\" : \"Region of address\",\"CONTACTLASTNAME\" : \"Contac person's last name for customer\",\"CONTACTFIRSTNAME\" : \"Contac person's first name for customer\",\"DEALSIZE\" : \"Size of the sale for order line\"}\n",
     "\n",
-    "#print(\"A DataFrame\",df.shape[0],\"Sort és\",df.shape[1],\"Oszlopot tartalmaz!\")\n",
+    "print(\"A DataFrame\",df.shape[0],\"Sort és\",df.shape[1],\"Oszlopot tartalmaz!\")\n",
     "\n",
     "df_columns_explantion = pd.DataFrame(dict,index=[0])\n",
     "df_columns_explantion = df_columns_explantion.transpose()\n",
-    "#df_columns_explantion"
+    "df_columns_explantion"
    ]
   },
   {
@@ -52,7 +52,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#df.info()"
+    "df.info()"
    ]
   },
   {
@@ -61,8 +61,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#print(df.isnull().sum())\n",
-    "#print(\"Látható, hogy pár oszlopban rengeteg adat hiányzik ezek célszerű lehet a későbbiekben törölni\")"
+    "print(df.isnull().sum())\n",
+    "print(\"Látható, hogy pár oszlopban rengeteg adat hiányzik ezek célszerű lehet a későbbiekben törölni\")"
    ]
   },
   {
@@ -94,7 +94,7 @@
     "df.drop(['ADDRESSLINE2', 'STATE', 'POSTALCODE', 'TERRITORY'], axis=1, inplace=True)\n",
     "#Töröljük ki azokat az oszlopokat amelyekre nem lesz szükségünk\n",
     "df.drop(['ORDERNUMBER','ORDERLINENUMBER','ORDERDATE','STATUS','QTR_ID','PHONE','CONTACTFIRSTNAME', 'CONTACTLASTNAME', 'PRODUCTCODE', 'ADDRESSLINE1'], axis=1, inplace=True)\n",
-    "#df"
+    "df"
    ]
   },
   {
@@ -181,13 +181,13 @@
     }
    ],
    "source": [
-    "#Elöször hozzunk létre egy Date oszlopot a YEAR_ID ilettve a MONTH_ID segítségével\n",
+    "# Először hozzunk létre egy Date oszlopot a YEAR_ID illetve a MONTH_ID segítségével\n",
     "df['DATE'] = pd.to_datetime(df['YEAR_ID'].astype(str) + '-' + df['MONTH_ID'].astype(str), format='%Y-%m')\n",
     "\n",
-    "#Ezekre már nem lesz szükség\n",
+    "# Ezekre már nem lesz szükség\n",
     "df.drop(columns=[\"MONTH_ID\",\"YEAR_ID\"],inplace=True)\n",
     "\n",
-    "#Majd az átláthatóság kedvért a Dátum oszlopot az első helyre hozzuk\n",
+    "# Majd az átláthatóság kedvért a Dátum oszlopot az első helyre hozzuk\n",
     "cols = list(df.columns)\n",
     "cols.insert(0, cols.pop(cols.index('DATE')))\n",
     "df = df[cols]\n",
@@ -266,7 +266,7 @@
     "sales_by_countries = sales_by_countries.sort_values(ascending=False)\n",
     "\n",
     "\n",
-    "# 1. Diagram\n",
+    "# Összes eladás diagram\n",
     "plt.figure(figsize=(12, 4))\n",
     "ax = sns.barplot(data=sales_by_countries, palette='viridis')\n",
     "formatter = ticker.FuncFormatter(lambda x, _: '{:,.0f}'.format(x))\n",
@@ -275,7 +275,7 @@
     "plt.title('Total Sales by Country')\n",
     "plt.show()\n",
     "\n",
-    "# 2. Diagram\n",
+    "# 2. Eloszlás Diagram\n",
     "total_sales = sales_by_countries.sum()\n",
     "sales_percentage_by_country = (sales_by_countries / total_sales) * 100\n",
     "sales_percentage_df = sales_percentage_by_country.reset_index(name='Percentage')\n",
